fix: white space below navbar

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ section {
   );
   z-index: 100;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
 }
 
 .nav-link-container {
